# angelus

./: .credo.exs  .gitignore  .tool-versions  AGENTS.md  BUILDING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  angelus_plan.md  justfile  mix.exs
.codebase-memory/: artifact.json  graph.db.zst
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docker/: valgrid.Dockerfile  valgrid.Dockerfile.dockerignore
docs/: BUILDING.md
lib/: angelus.ex
lib/angelus/: angle.ex  application.ex  astro.ex  coordinates.ex  ephemeride.ex  ephemeris.ex  motor.ex  observer.ex  spice.ex
lib/angelus/adapters/: spice_native.ex
lib/angelus/astro/: adapter.ex  body.ex  catalog.ex  geoid.ex  location.ex  point.ex
lib/angelus/astro/adapters/: spice.ex
lib/angelus/ephemeride/: options.ex
lib/angelus/ephemeris/: adapter.ex  body_catalog.ex  body_position.ex
lib/angelus/ephemeris/adapters/: spice.ex
lib/angelus/motor/: kernel_set.ex  server.ex  supervisor.ex  worker_protocol.ex
lib/angelus/spice/: body_targets.ex  kernel_set.ex  server.ex  supervisor.ex  worker_protocol.ex
lib/mix/tasks/: angelus.kernels.ex  angelus.validate.horizons.ex  ephemeridde.ex  ephemeride.ex  fetch_horizons.ex  geoid.ex  kernels.ex  prepare.ex
native/: .clangd  Makefile  meson.build
native/spice_worker/: Makefile  fetch-libs.sh  meson.build
native/spice_worker/patches/: README.md
native/spice_worker/src/: cspice_ops.c  cspice_ops.h  main.c  protocol.h
native/src/: cspice_ops.c  cspice_ops.h  erfa_ops.c  erfa_ops.h  main.c  protocol.c  protocol.h
native/src/astro/: cspice_ops.c  cspice_ops.h  erfa_ops.c  erfa_ops.h  frames.c  frames.h  result.h  state.h  time.c  time.h
native/src/io/: packet.c  packet.h  request.c  request.h  response.c  response.h
native/src/kernels/: defaults.c  defaults.h
native/subprojects/: cspice.wrap  erfa.wrap
scripts/: hex_package_smoke.sh  native_leak_check.exs
test/: test_helper.exs
test/angelus/: coordinates_test.exs  ephemeris_test.exs  spice_test.exs
test/angelus/ephemeris/: body_catalog_test.exs  body_position_test.exs
test/angelus/spice/: body_targets_test.exs  kernel_set_test.exs  worker_protocol_test.exs
test/e2e/: ephemeride_test.exs
test/e2e/astro/: horizons_validation_test.exs
test/e2e/ephemeris/: horizons_validation_test.exs
test/e2e/motor/: ephemeride_test.exs
test/fixtures/horizons/: README.md
test/support/: mocks.ex  spice_stub.ex
test/support/fixtures/horizons/: README.md  de442_positions.json
test/unit/: angelus_test.exs  angle_test.exs  astro_test.exs  ephemeride_test.exs  ephemeris_test.exs  motor_test.exs  observer_test.exs  spice_test.exs
test/unit/astro/: body_test.exs  catalog_test.exs  geoid_test.exs  location_test.exs  point_test.exs
test/unit/ephemeride/: options_test.exs
test/unit/ephemeris/: body_catalog_test.exs
test/unit/motor/: kernel_set_test.exs  native_protocol_test.exs  worker_protocol_test.exs
test/unit/spice/: kernel_set_test.exs  worker_protocol_test.exs
